--- a/project.yml
+++ b/project.yml
@@ -11,6 +11,7 @@ settings:
     CODE_SIGN_IDENTITY: "-"
     DEVELOPMENT_TEAM: ""
     SWIFT_VERSION: "6.0"
+    SWIFT_STRICT_CONCURRENCY: complete
 
 targets:
   GitHubMonitor:
@@ -38,3 +39,10 @@ targets:
         NSPrincipalClass: NSApplication
         NSMainStoryboardFile: ""
         NSHighResolutionCapable: true
+  GitHubMonitorTests:
+    type: bundle.unit-test
+    platform: macOS
+    sources:
+      - path: Tests/GitHubMonitorTests
+    dependencies:
+      - target: GitHubMonitor
