--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   release:
     name: Build and Release
-    runs-on: macos-14
+    runs-on: macos-26-arm64
     
     steps:
     - name: Checkout code
